--- a/.gitignore
+++ b/.gitignore
@@ -1,83 +1,168 @@
-# Certificats et clés privées
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# VPN specific files
+vpn_configs/
+*.ovpn
 *.key
 *.crt
 *.pem
-*.p12
-*.pfx
-certificates/
+auth.txt
 
-# Logs
-*.log
-logs/
-/var/log/
-
-# Fichiers temporaires
-*.tmp
-*.temp
-temp/
-tmp/
-
-# Fichiers de configuration avec données sensibles
-*-private.ovpn
-*-secret.conf
-
-# Fichiers système Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
-
-# Fichiers système macOS
+# OS specific files
 .DS_Store
-.AppleDouble
-.LSOverride
-Icon?
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# Fichiers système Linux
-*~
-.nfs*
-
-# Éditeurs
+# IDE specific files
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# Node.js (pour les bots)
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Python (pour les bots)
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-.venv/
-
-# Backups
+# Temporary files
+*.tmp
+*.temp
 *.bak
 *.backup
-backup/
-backups/
 
-# Archives
-*.zip
-*.tar.gz
-*.rar
-*.7z
+# Log files
+*.log
+logs/
 
-# Installateurs
-*.msi
-*.exe
-*.deb
-*.rpm
-
-# Fichiers de statut OpenVPN
-ipp.txt
-openvpn-status.log
+# Development files
+test_*.py
+*_test.py
+debug_*.py
